--- a/timing.html
+++ b/timing.html
@@ -324,7 +324,7 @@ function loadTiming() {
   <!-- Google Ads Placeholder (optional) -->
   <div style="margin:15px 0; text-align:center;">
     <!-- Example: Replace this div with your AdSense code -->
-    <p style="color:#888; font-size:14px;">[Google Ads Placeholder]</p>
+    <p style="color:#888; font-size:14px;">--</p>
   </div>
 
   <!-- Urdu Version -->
