--- a/availSeats.html
+++ b/availSeats.html
@@ -256,7 +256,7 @@ footer a:hover {
     <!-- Google Ads Placeholder -->
     <div style="margin:15px 0; text-align:center;">
         <!-- Example: Replace this div with your AdSense code -->
-        <p style="color:#888; font-size:14px;">[Google Ads Placeholder]</p>
+        <p style="color:#888; font-size:14px;">--</p>
     </div>
 
     <!-- Urdu Heading -->
