--- a/about-us.html
+++ b/about-us.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7298674822934289"
+     crossorigin="anonymous"></script>
 <meta charset="UTF-8">
 <title>About Us | pakrail.online</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
