--- a/availSeats.html
+++ b/availSeats.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7298674822934289"
+     crossorigin="anonymous"></script>
 <meta charset="UTF-8">
 <title>PakRail.online – Seat Availability</title>
 <meta name="description" content="Live train tracking of Pakistan Railways. Check real-time train status, railway booking, delays and running position.">
