--- a/prtracker/index.html
+++ b/prtracker/index.html
@@ -140,10 +140,22 @@ text-align: center;
 <a href="../index.html">Home</a>
 <a href="../timing.html">Train Timing</a>
 <a href="../ticketing.html">Ticketing</a>
-
-
-
 </nav>
+       <!-- Train Tracking Info Section -->
+<div class="train-tracking-info" style="margin-top:20px; font-family: Arial, sans-serif;">
+
+    <!-- English Paragraph -->
+    <p style="text-align:justify; font-size:1rem; line-height:1.6; margin-bottom:15px;">
+        On this page, you can <strong>track the live status</strong> of any train currently running across Pakistan Railways network. The drop-down menu contains all active trains, allowing you to select the one you want to monitor. After selecting your train, click the <strong>Search</strong> button and wait for a few moments to get accurate real-time updates on its current location, expected arrival, and departure times at upcoming stations. This tool helps passengers, families, and railway enthusiasts stay informed about train movements, avoid delays, and plan journeys efficiently. Whether you are traveling for business, leisure, or visiting friends and relatives, this live tracking feature ensures you never miss important updates regarding your train.
+    </p>
+
+    <!-- Urdu Paragraph -->
+    <p style="text-align:justify; direction:rtl; font-family:'Jameel Noori Nastaleeq', 'Noto Nastaliq Urdu', serif; font-size:1rem; line-height:1.6;">
+        اس صفحہ پر آپ پاکستان ریلوے کے نیٹ ورک پر چل رہی کسی بھی ٹرین کی <strong>لائیو اسٹیٹس</strong> معلوم کر سکتے ہیں۔ ڈراپ ڈاؤن مینو میں تمام فعال ٹرینیں درج ہیں، جن میں سے آپ اپنی مطلوبہ ٹرین منتخب کر سکتے ہیں۔ ٹرین منتخب کرنے کے بعد <strong>سرچ</strong> بٹن پر کلک کریں اور چند لمحے انتظار کریں تاکہ آپ کو اس کی موجودہ لوکیشن، آنے والے اسٹیشنز پر متوقع آمد اور روانگی کے اوقات کی صحیح معلومات حاصل ہو سکیں۔ یہ سہولت مسافروں، خاندانوں اور ریلوے کے شائقین کو ٹرین کی حرکات سے باخبر رہنے، تاخیر سے بچنے اور اپنے سفر کی بہتر منصوبہ بندی کرنے میں مدد دیتی ہے۔ چاہے آپ کاروباری، تفریحی یا دوستوں اور رشتہ داروں سے ملاقات کے لیے سفر کر رہے ہوں، یہ لائیو ٹرین ٹریکنگ خصوصیت آپ کو ہر اہم اپ ڈیٹ کے بارے میں آگاہ رکھتی ہے۔
+    </p>
+
+</div>
+
 <div class="controls">
 <div>
 <label>Select Date</label>
@@ -366,20 +378,6 @@ function renderLive(data, isLive) {
 init();
 </script>
 
-<!-- Train Tracking Info Section -->
-<div class="train-tracking-info" style="margin-top:20px; font-family: Arial, sans-serif;">
-
-    <!-- English Paragraph -->
-    <p style="text-align:justify; font-size:1rem; line-height:1.6; margin-bottom:15px;">
-        On this page, you can <strong>track the live status</strong> of any selected train. All currently running trains are listed in the drop-down menu. Simply select your train, click the <strong>Search</strong> button, and wait a few moments to view the train's live position. Stay updated on train locations in real-time and plan your journey accordingly.
-    </p>
-
-    <!-- Urdu Paragraph -->
-    <p style="text-align:justify; direction:rtl; font-family:'Jameel Noori Nastaleeq', 'Noto Nastaliq Urdu', serif; font-size:1rem; line-height:1.6;">
-        اس صفحہ پر آپ کسی بھی منتخب شدہ ٹرین کی <strong>لائیو اسٹیٹس</strong> دیکھ سکتے ہیں۔ تمام چلتی ہوئی ٹرینیں ڈراپ ڈاؤن مینو میں درج ہیں۔ بس اپنی ٹرین منتخب کریں، <strong>سرچ</strong> بٹن پر کلک کریں، اور چند لمحے انتظار کریں تاکہ ٹرین کی لائیو پوزیشن معلوم ہو سکے۔ حقیقی وقت میں ٹرین کی لوکیشن معلوم کریں اور اپنے سفر کی منصوبہ بندی کریں۔
-    </p>
-
-</div>
 <div class="footer-text">Copyright &copy; <span id="year"></span> Pakistan Railways</div>
 </body>
 </html>
