--- a/prtracker/index.html
+++ b/prtracker/index.html
@@ -146,7 +146,7 @@ text-align: center;
 
     <!-- English Paragraph -->
     <p style="text-align:justify; font-size:1rem; line-height:1.6; margin-bottom:15px;">
-        On this page, you can <strong>track the live status</strong> of any train currently running across Pakistan Railways network. The drop-down menu contains all active trains, allowing you to select the one you want to monitor. After selecting your train, click the <strong>Search</strong> button and wait for a few moments to get accurate real-time updates on its current location, expected arrival, and departure times at upcoming stations. This tool helps passengers, families, and railway enthusiasts stay informed about train movements, avoid delays, and plan journeys efficiently. Whether you are traveling for business, leisure, or visiting friends and relatives, this live tracking feature ensures you never miss important updates regarding your train.
+        On this page, you can <strong>track the live status</strong> of any train currently running across Pakistan Railways network. The drop-down menu contains all active trains, allowing you to select the one you want to monitor. After selecting your train, wait for a few moments to get accurate real-time updates on its current location, expected arrival, and departure times at upcoming stations. This tool helps passengers, families, and railway enthusiasts stay informed about train movements, avoid delays, and plan journeys efficiently. Whether you are traveling for business, leisure, or visiting friends and relatives, this live tracking feature ensures you never miss important updates regarding your train.
     </p>
 
     <!-- Urdu Paragraph -->
