--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ nav a:hover {
   <a href="pracademy.html">Pak Rail Academy</a>
     <a href="icf.html">P.R Carriage Factory</a>
   <a href="faqs.html">FAQs</a>
-  <a href="https://news.pakrail.online" >Latest News</a>
+  <a href="https://news.pakrail.online" target="_blank">Latest News</a>
   <!--
   <a href="stations.html">Stations</a>
   <a href="timing.html">Train Timing</a>
