--- a/pakistan-railways.html
+++ b/pakistan-railways.html
@@ -64,6 +64,81 @@ footer{
         font-size:22px;
     }
 }
+    
+  .main-nav {
+    display:flex;
+    flex-wrap:wrap;
+    align-items:center;
+    gap:15px;
+    background:#1b5e20;
+    padding:12px;
+}
+
+.main-nav a,
+.dropbtn {
+    color:#fff;
+    text-decoration:none;
+    padding:10px 14px;
+    font-size:15px;
+    background:#2e7d32;
+    border-radius:4px;
+    border:none;
+    cursor:pointer;
+    font-family:inherit;
+}
+
+.main-nav a:hover,
+.dropbtn:hover {
+    background:#81c784;
+    color:#000;
+}
+
+/* Dropdown */
+.dropdown {
+    position:relative;
+}
+
+.dropdown-content {
+    display:none;
+    position:absolute;
+    right:0;
+    background:#ffffff;
+    min-width:200px;
+    box-shadow:0 4px 8px rgba(0,0,0,0.15);
+    border-radius:4px;
+    z-index:1000;
+}
+
+.dropdown-content a {
+    display:block;
+    padding:10px 14px;
+    color:#333;
+    background:#fff;
+}
+
+.dropdown-content a:hover {
+    background:#f2f2f2;
+}
+
+/* Show dropdown on hover */
+.dropdown:hover .dropdown-content {
+    display:block;
+}
+
+/* Mobile friendly */
+@media (max-width:768px) {
+    .main-nav {
+        flex-direction:column;
+        align-items:flex-start;
+    }
+
+    .dropdown-content {
+        position:static;
+        box-shadow:none;
+        width:100%;
+    }
+}
+
 </style>
 </head>
 <body>
@@ -72,7 +147,23 @@ footer{
     <h1>Pakistan Railways</h1>
     <p>History, Routes, Services & National Importance</p>
 </header>
+<nav class="main-nav">
+  <a href="index.html">Home</a>
+  
+  <a href="faqs.html">FAQs</a>
+  <a href="https://news.pakrail.online" target="_blank">Latest News</a>
 
+  <!-- DROPDOWN MENU -->
+  <div class="dropdown">
+    <button class="dropbtn">Railways ▾</button>
+    <div class="dropdown-content">
+      <a href="pakistan-railways.html">Pakistan Railways</a>
+      <a href="travel-guide.html">Travel Guide</a>
+      <a href="railway-classes.html">Railway Classes</a>
+      <a href="railway-safety.html">Railway Safety</a>
+    </div>
+  </div>
+</nav>
 <div class="container">
 
 <!-- WHAT IS PAKISTAN RAILWAYS -->
