--- a/railway-safety.html
+++ b/railway-safety.html
@@ -69,6 +69,34 @@ footer{
     }
 }
     
+ .main-nav {
+    display:flex;
+    flex-wrap:wrap;
+    align-items:center;
+    gap:15px;
+    background:#1b5e20;
+    padding:12px;
+}
+
+.main-nav a,
+.dropbtn {
+    color:#fff;
+    text-decoration:none;
+    padding:10px 14px;
+    font-size:15px;
+    background:#2e7d32;
+    border-radius:4px;
+    border:none;
+    cursor:pointer;
+    font-family:inherit;
+}
+
+.main-nav a:hover,
+.dropbtn:hover {
+    background:#81c784;
+    color:#000;
+}
+
 /* Dropdown */
 .dropdown {
     position:relative;
