--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@ nav a:hover {
       <a href="travel-guide.html">Travel Guide</a>
       <a href="railway-classes.html">Railway Classes</a>
       <a href="railway-safety.html">Railway Safety</a>
+         <a href="rail-ka-safar.html">Train Journey(Rail ka Safar)</a>
     </div>
   </div>
 </nav>
