--- a/railway-classes.html
+++ b/railway-classes.html
@@ -167,6 +167,7 @@ footer{
       <a href="travel-guide.html">Travel Guide</a>
       <a href="railway-classes.html">Railway Classes</a>
       <a href="railway-safety.html">Railway Safety</a>
+         <a href="rail-ka-safar.html">Train Journey(Rail ka Safar)</a>
     </div>
   </div>
 </nav>
