--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@ nav a:hover {
   <a href="icf.html">P.R Carriage Factory</a>
   <a href="faqs.html">FAQs</a>
   <a href="https://news.pakrail.online" target="_blank">Latest News</a>
+   <a href="https://drama.pakrail.online" target="_blank">Watch Drama</a>
 
   <!-- DROPDOWN MENU -->
   <div class="dropdown">
