--- a/index.html
+++ b/index.html
@@ -267,7 +267,12 @@ nav a:hover {
         width:100%;
     }
 }
-
+/* ===== Blinking Train Tracking menu ===== */
+.blink-tracking {
+  color: yellow !important;
+  font-weight: bold;
+  animation: blinkText 1s infinite;
+}
 </style>
 </head>
 
@@ -289,8 +294,8 @@ nav a:hover {
   <a href="pracademy.html">Pak Rail Academy</a>
   <a href="icf.html">P.R Carriage Factory</a>
   <a href="faqs.html">FAQs</a>
-  <a href="https://news.pakrail.online" target="_blank">Latest News</a>
-   <a href="https://drama.pakrail.online" target="_blank">Watch Drama</a>
+  <a href="https://news.pakrail.online" class="blink-tracking" target="_blank">Latest News</a>
+   <a href="https://drama.pakrail.online" class="blink-tracking" target="_blank">Watch Drama</a>
 
   <!-- DROPDOWN MENU -->
   <div class="dropdown">
