--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7298674822934289"
      crossorigin="anonymous"></script>
 <meta charset="UTF-8">
@@ -8,7 +9,7 @@
 <title>PakRail Online</title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
+ <meta name="description" content="Get the latest Pakistan Railways train schedules and updates, flight timings, and travel info. Plan your journey easily with PakRail Online.">
 <style>
 /* ===== HEADER ===== */
 .main-header {
