--- a/pakistan-railways.html
+++ b/pakistan-railways.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>pakrail.online | Pakistan Railways | History, Routes & Services</title>
-
+<meta name="description" content="Get the latest Pakistan Railways train schedules and updates, flight timings, and travel info. Plan your journey easily with PakRail Online.">
 <style>
 body{
     margin:0;
