--- a/rail-ka-safar.html
+++ b/rail-ka-safar.html
@@ -12,72 +12,20 @@ body {
     line-height:1.7;
 }
 
+/* Header */
 header{
     background:#2e7d32;
     color:#fff;
     text-align:center;
     padding:25px 15px;
 }
-
 header h1{
     margin:0;
     font-size:28px;
 }
 
-.container{
-    max-width:1100px;
-    margin:20px auto;
-    padding:20px;
-    background:#fff;
-    border-radius:6px;
-    box-shadow:0 2px 6px rgba(0,0,0,0.1);
-}
-
-section{
-    margin-bottom:40px;
-}
-
-section h2{
-    color:#2e7d32;
-    border-bottom:2px solid #e0e0e0;
-    padding-bottom:6px;
-}
-
-.story{
-    margin-top:15px;
-}
-
-.story h3{
-    color:#1b5e20;
-    font-size:1.2rem;
-    margin-bottom:5px;
-}
-
-.story p{
-    margin-bottom:15px;
-}
-
-.urdu{
-    direction:rtl;
-    font-size:1rem;
-    color:#333;
-}
-
-footer{
-    background:#1b5e20;
-    color:#fff;
-    text-align:center;
-    padding:15px;
-    font-size:14px;
-}
-
-@media(max-width:768px){
-    header h1{
-        font-size:22px;
-    }
-}
-        
- .main-nav {
+/* Navigation */
+.main-nav {
     display:flex;
     flex-wrap:wrap;
     align-items:center;
@@ -85,9 +33,7 @@ footer{
     background:#1b5e20;
     padding:12px;
 }
-
-.main-nav a,
-.dropbtn {
+.main-nav a, .dropbtn {
     color:#fff;
     text-decoration:none;
     padding:10px 14px;
@@ -96,20 +42,12 @@ footer{
     border-radius:4px;
     border:none;
     cursor:pointer;
-    font-family:inherit;
 }
-
-.main-nav a:hover,
-.dropbtn:hover {
+.main-nav a:hover, .dropbtn:hover {
     background:#81c784;
     color:#000;
 }
-
-/* Dropdown */
-.dropdown {
-    position:relative;
-}
-
+.dropdown { position:relative; }
 .dropdown-content {
     display:none;
     position:absolute;
@@ -120,35 +58,79 @@ footer{
     border-radius:4px;
     z-index:1000;
 }
-
 .dropdown-content a {
     display:block;
     padding:10px 14px;
     color:#333;
     background:#fff;
 }
+.dropdown-content a:hover { background:#f2f2f2; }
+.dropdown:hover .dropdown-content { display:block; }
 
-.dropdown-content a:hover {
-    background:#f2f2f2;
+/* Page Layout with side ads */
+.page-layout {
+    display: flex;
+    max-width: 1400px;
+    margin: 20px auto;
+    gap: 15px;
+    padding: 0 10px;
+}
+.sidebar {
+    width: 160px;
+    flex-shrink: 0;
+}
+.container {
+    flex:1;
+    padding:20px;
+    background:#fff;
+    border-radius:6px;
+    box-shadow:0 2px 6px rgba(0,0,0,0.1);
 }
 
-/* Show dropdown on hover */
-.dropdown:hover .dropdown-content {
-    display:block;
+/* Content Sections */
+section{
+    margin-bottom:40px;
+}
+section h2{
+    color:#2e7d32;
+    border-bottom:2px solid #e0e0e0;
+    padding-bottom:6px;
+}
+.story{
+    margin-top:15px;
+}
+.story h3{
+    color:#1b5e20;
+    font-size:1.2rem;
+    margin-bottom:5px;
+}
+.story p{
+    margin-bottom:15px;
+}
+.urdu{
+    direction:rtl;
+    font-size:1rem;
+    color:#333;
 }
 
-/* Mobile friendly */
-@media (max-width:768px) {
-    .main-nav {
-        flex-direction:column;
-        align-items:flex-start;
-    }
+/* Footer */
+footer{
+    background:#1b5e20;
+    color:#fff;
+    text-align:center;
+    padding:15px;
+    font-size:14px;
+}
 
-    .dropdown-content {
-        position:static;
-        box-shadow:none;
-        width:100%;
+/* Mobile */
+@media(max-width:1000px){
+    .page-layout {
+        flex-direction: column;
     }
+    .sidebar { display:none; }
+    header h1 { font-size:22px; }
+    .main-nav { flex-direction:column; align-items:flex-start; }
+    .dropdown-content { position:static; box-shadow:none; width:100%; }
 }
 </style>
 </head>
@@ -158,13 +140,12 @@ footer{
     <h1>Rail & Journey Articles</h1>
     <p>Railway Experiences, Memories & Stories | ریل و سفر کی کہانیاں</p>
 </header>
+
 <nav class="main-nav">
   <a href="index.html">Home</a>
-  
   <a href="faqs.html">FAQs</a>
   <a href="https://news.pakrail.online" target="_blank">Latest News</a>
 
-  <!-- DROPDOWN MENU -->
   <div class="dropdown">
     <button class="dropbtn">Railways ▾</button>
     <div class="dropdown-content">
@@ -175,85 +156,67 @@ footer{
     </div>
   </div>
 </nav>
-<div class="container">
 
-<!-- Experience of Train Journeys -->
-<section>
-<h2>Experience of Train Journeys</h2>
+<div class="page-layout">
 
-<div class="story">
-<h3>Morning Train to Lahore</h3>
-<p>
-Travelling early in the morning by train from Karachi to Lahore is an unforgettable experience. The soft morning light touches the fields as the train passes through villages. Passengers sip tea while exchanging stories. Children are excited to see the tracks ahead, and the rhythm of the train creates a sense of calm. Conversations flow naturally, and strangers become temporary companions. This journey not only connects cities but also emotions and memories. Long hours spent in the train compartment allow one to reflect, read, or simply watch the landscape roll by, creating an intimate experience of travel.
-</p>
-<div class="urdu">
-صبح کے وقت کراچی سے لاہور کی جانب ریل کے ذریعے سفر ایک ناقابل فراموش تجربہ ہے۔ نرم صبح کی روشنی کھیتوں کو چھوتی ہے جب ریل گاؤں کے راستوں سے گزرتی ہے۔ مسافر چائے کے کپ کے ساتھ کہانیاں شیئر کرتے ہیں۔ بچے سامنے کی پٹری دیکھ کر پرجوش ہیں اور ریل کی رفتار ایک سکون کا احساس دیتی ہے۔ گفتگو قدرتی طور پر چلتی ہے اور اجنبی عارضی ساتھی بن جاتے ہیں۔ یہ سفر صرف شہروں کو نہیں بلکہ جذبات اور یادوں کو بھی جوڑتا ہے۔ طویل وقت کمپارٹمنٹ میں گزارنے سے انسان غور و فکر کرتا ہے، پڑھتا ہے یا بس منظر دیکھتا ہے، جو ایک منفرد سفر کا تجربہ فراہم کرتا ہے۔
-</div>
-</div>
+    <!-- LEFT SIDEBAR AD -->
+    <aside class="sidebar">
+        <!-- Insert your vertical 160x600 ad script here -->
+        <script async src="YOUR_AD_SCRIPT_HERE"></script>
+    </aside>
 
-<div class="story">
-<h3>Evening Journey through Mountains</h3>
-<p>
-The evening train that winds through the hilly regions offers breathtaking views. As the sun sets, the mountains glow in shades of orange and pink. The whistle of the train echoes in the valleys. Travelers share snacks and smiles. Photography enthusiasts capture every moment, while others relax in the gentle sway of the coaches. It is a journey that reminds one of nature's beauty and the peace that train travel can offer. The combination of movement, scenery, and the train’s rhythm creates a memory that lasts forever.
-</p>
-<div class="urdu">
-وہ شام کی ریل جو پہاڑی علاقوں سے گزرتی ہے شاندار مناظر پیش کرتی ہے۔ سورج غروب ہوتے ہوئے پہاڑوں کو نارنجی اور گلابی رنگ میں نکھارتا ہے۔ ریل کا سیٹی کا شور وادیوں میں گونجتا ہے۔ مسافر اس دوران ناشتے اور مسکراہٹیں بانٹتے ہیں۔ فوٹوگرافی کے شوقین ہر لمحہ قید کرتے ہیں، جبکہ دیگر کوچز کی ہلکی جنبش میں سکون محسوس کرتے ہیں۔ یہ سفر فطرت کی خوبصورتی اور ریل کے سفر کے سکون کی یاد دلاتا ہے۔ حرکت، مناظر اور ریل کی روانی کا امتزاج ایک دائمی یادگار بناتا ہے۔
-</div>
-</div>
+    <!-- MAIN CONTENT -->
+    <div class="container">
 
-</section>
+        <!-- Experience of Train Journeys -->
+        <section>
+        <h2>Experience of Train Journeys</h2>
+        <div class="story">
+            <h3>Morning Train to Lahore</h3>
+            <p>
+            Travelling early in the morning by train from Karachi to Lahore is an unforgettable experience...
+            </p>
+            <div class="urdu">
+            صبح کے وقت کراچی سے لاہور کی جانب ریل کے ذریعے سفر ایک ناقابل فراموش تجربہ ہے...
+            </div>
+        </div>
+        </section>
 
-<!-- Cultural Value -->
-<section>
-<h2>Cultural Value</h2>
+        <!-- Cultural Value -->
+        <section>
+        <h2>Cultural Value</h2>
+        <div class="story">
+            <h3>Festivals and Train Journeys</h3>
+            <p>
+            Train journeys during cultural festivals provide an insight into local traditions...
+            </p>
+            <div class="urdu">
+            ثقافتی تہواروں کے دوران ریل کے سفر سے مقامی روایات کا پتہ چلتا ہے...
+            </div>
+        </div>
+        </section>
 
-<div class="story">
-<h3>Festivals and Train Journeys</h3>
-<p>
-Train journeys during cultural festivals provide an insight into local traditions. People wear colorful attire, carry gifts, and share food onboard. The train becomes a moving festival, reflecting the vibrant culture of Pakistan. Passengers exchange greetings and stories about their towns. Music and laughter fill the compartments, creating a social bond among travelers. It is fascinating to see how trains not only connect places but also cultural experiences, providing a window into the heart of the communities they pass through.
-</p>
-<div class="urdu">
-ثقافتی تہواروں کے دوران ریل کے سفر سے مقامی روایات کا پتہ چلتا ہے۔ لوگ رنگین لباس پہنتے ہیں، تحائف لاتے ہیں اور کھانے کی چیزیں شیئر کرتے ہیں۔ ریل ایک متحرک میلہ بن جاتی ہے، جو پاکستان کی متنوع ثقافت کی عکاسی کرتی ہے۔ مسافر ایک دوسرے کو سلام کرتے ہیں اور اپنے قصبوں کی کہانیاں بیان کرتے ہیں۔ کمپارٹمنٹس میں موسیقی اور ہنسی کی بازگشت ہوتی ہے، جو مسافروں میں سماجی رشتہ پیدا کرتی ہے۔ یہ دیکھنا دلچسپ ہے کہ ریلیں صرف مقامات کو نہیں بلکہ ثقافتی تجربات کو بھی جوڑتی ہیں۔
-</div>
-</div>
+        <!-- Memories and Stories -->
+        <section>
+        <h2>Memories and Stories</h2>
+        <div class="story">
+            <h3>Childhood Memories on the Train</h3>
+            <p>
+            Many people remember their first train journey vividly...
+            </p>
+            <div class="urdu">
+            بہت سے لوگ اپنی پہلی ریل کے سفر کو یادگار انداز میں یاد رکھتے ہیں...
+            </div>
+        </div>
+        </section>
 
-<div class="story">
-<h3>Heritage Stations</h3>
-<p>
-Old railway stations reflect the historical and cultural heritage of Pakistan. The architecture, signboards, and platforms narrate stories from decades ago. Passengers often pause to take photographs, appreciating the craftsmanship and historical significance. Every station has its own tale and visiting them during journeys enhances one's understanding of local culture. The train acts as a bridge between past and present, allowing travelers to witness history firsthand.
-</p>
-<div class="urdu">
-پرانے ریلویز اسٹیشن پاکستان کی تاریخی اور ثقافتی ورثے کی عکاسی کرتے ہیں۔ عمارتیں، سائن بورڈز اور پلیٹ فارم دہائیوں پرانی کہانیاں بیان کرتے ہیں۔ مسافر اکثر فوٹوگرافی کے لیے رکتے ہیں اور فنکاری اور تاریخی اہمیت کی قدر کرتے ہیں۔ ہر اسٹیشن کی اپنی کہانی ہوتی ہے اور سفر کے دوران انہیں دیکھنا مقامی ثقافت کی سمجھ کو بڑھاتا ہے۔ ریل ماضی اور حال کے درمیان پل کا کام کرتی ہے اور مسافروں کو تاریخ کا براہ راست مشاہدہ کرنے کا موقع دیتی ہے۔
-</div>
-</div>
+    </div>
 
-</section>
-
-<!-- Memories and Stories -->
-<section>
-<h2>Memories and Stories</h2>
-
-<div class="story">
-<h3>Childhood Memories on the Train</h3>
-<p>
-Many people remember their first train journey vividly. The excitement of boarding, looking out at passing scenery, and interacting with fellow passengers creates unforgettable memories. Snacks shared, games played, and stories told during these trips remain cherished for years. Trains have a unique way of leaving lasting impressions on young minds, teaching patience, observation, and the joy of travel. Such journeys often become a treasured family story passed down through generations.
-</p>
-<div class="urdu">
-بہت سے لوگ اپنی پہلی ریل کے سفر کو یادگار انداز میں یاد رکھتے ہیں۔ بورڈنگ کا جوش، گزرتے مناظر کو دیکھنا اور دیگر مسافروں کے ساتھ بات چیت ناقابل فراموش یادیں پیدا کرتے ہیں۔ سفر کے دوران اشتراک کیے گئے ناشتے، کھیلے گئے کھیل اور سنائی گئی کہانیاں سالوں تک یاد رکھی جاتی ہیں۔ ریلیں نوجوان ذہنوں پر گہرا اثر ڈالتی ہیں، صبر، مشاہدہ اور سفر کی خوشی سکھاتی ہیں۔ ایسے سفر اکثر ایک قیمتی خاندانی کہانی بن جاتے ہیں جو نسل در نسل منتقل ہوتی ہے۔
-</div>
-</div>
-
-<div class="story">
-<h3>Unexpected Encounters</h3>
-<p>
-Train journeys sometimes introduce travelers to strangers who become lifelong friends. Conversations that start casually often turn into deep connections. Sharing compartments, meals, and experiences onboard creates a unique social environment. These encounters leave lasting impressions, reminding travelers that journeys are not just about reaching a destination but also about the people and stories met along the way.
-</p>
-<div class="urdu">
-ریل کے سفر کبھی کبھار مسافروں کو اجنبیوں سے متعارف کراتے ہیں جو عمر بھر کے دوست بن جاتے ہیں۔ عام گفتگو اکثر گہرے تعلقات میں بدل جاتی ہے۔ کمپارٹمنٹ، کھانے اور تجربات کا اشتراک ایک منفرد سماجی ماحول پیدا کرتا ہے۔ یہ ملاقاتیں دائمی اثرات چھوڑتی ہیں اور یاد دلاتی ہیں کہ سفر صرف منزل تک پہنچنے کے بارے میں نہیں بلکہ راستے میں ملنے والے لوگوں اور کہانیوں کے بارے میں بھی ہے۔
-</div>
-</div>
-
-</section>
+    <!-- RIGHT SIDEBAR AD -->
+    <aside class="sidebar">
+        <!-- Insert your vertical 160x600 ad script here -->
+        <script async src="YOUR_AD_SCRIPT_HERE"></script>
+    </aside>
 
 </div>
 
