--- a/rail-ka-safar.html
+++ b/rail-ka-safar.html
@@ -209,7 +209,17 @@ footer{
         <!-- Left Sidebar Banner -->
         <div class="sidebar">
             <!-- Paste your 160x600 ad script here -->
-            <script async src="YOUR-AD-SCRIPT-LEFT.js"></script>
+           <script>
+  atOptions = {
+    'key' : '97117e479a9b82e417d538f13ce7ee0a',
+    'format' : 'iframe',
+    'height' : 600,
+    'width' : 160,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/97117e479a9b82e417d538f13ce7ee0a/invoke.js"></script>
+
         </div>
 
         <!-- Main Content -->
