--- a/rail-ka-safar.html
+++ b/rail-ka-safar.html
@@ -322,6 +322,17 @@ footer{
     </div>
 </div>
 
+    <script>
+  atOptions = {
+    'key' : '9759f183ee6112d7f6fb2078793b18f8',
+    'format' : 'iframe',
+    'height' : 50,
+    'width' : 320,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/9759f183ee6112d7f6fb2078793b18f8/invoke.js"></script>
+
 <footer>
 © 2026 pakrail.online | Rail & Journey Articles
 </footer>
