--- a/rail-ka-safar.html
+++ b/rail-ka-safar.html
@@ -177,6 +177,11 @@ footer{
         box-shadow:none;
         width:100%;
     }
+
+    .footer-ad {
+  text-align: center;      /* centers the banner */
+  margin: 20px 0;          /* spacing above and below */
+}
 }
 </style>
 </head>
@@ -321,17 +326,19 @@ footer{
         </div>
     </div>
 </div>
-
-    <script>
-  atOptions = {
-    'key' : '9759f183ee6112d7f6fb2078793b18f8',
-    'format' : 'iframe',
-    'height' : 50,
-    'width' : 320,
-    'params' : {}
-  };
-</script>
-<script src="https://www.highperformanceformat.com/9759f183ee6112d7f6fb2078793b18f8/invoke.js"></script>
+<!-- Horizontal Banner Above Footer -->
+<div class="footer-ad">
+  <script>
+    atOptions = {
+      'key' : '9759f183ee6112d7f6fb2078793b18f8',
+      'format' : 'iframe',
+      'height' : 50,
+      'width' : 320,
+      'params' : {}
+    };
+  </script>
+  <script src="https://www.highperformanceformat.com/9759f183ee6112d7f6fb2078793b18f8/invoke.js"></script>
+</div>
 
 <footer>
 © 2026 pakrail.online | Rail & Journey Articles
