--- a/rail-ka-safar.html
+++ b/rail-ka-safar.html
@@ -255,6 +255,7 @@ footer{
             وہ شام کی ریل جو پہاڑی علاقوں سے گزرتی ہے شاندار مناظر پیش کرتی ہے۔ سورج غروب ہوتے ہوئے پہاڑوں کو نارنجی اور گلابی رنگ میں نکھارتا ہے۔ ریل کا سیٹی کا شور وادیوں میں گونجتا ہے۔ مسافر اس دوران ناشتے اور مسکراہٹیں بانٹتے ہیں۔ فوٹوگرافی کے شوقین ہر لمحہ قید کرتے ہیں، جبکہ دیگر کوچز کی ہلکی جنبش میں سکون محسوس کرتے ہیں۔ یہ سفر فطرت کی خوبصورتی اور ریل کے سفر کے سکون کی یاد دلاتا ہے۔ حرکت، مناظر اور ریل کی روانی کا امتزاج ایک دائمی یادگار بناتا ہے۔
             </div>
             </div>
+//hiltopads banner
 <script>
 (function(gevj){
 var d = document,
