--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <title>PakRail Online – Pakistan Train Seat Availability & Live Tracking</title>
+  <meta name="description" content="Check Pakistan train seat availability, live train tracking, and train schedules instantly with PakRail Online. Plan your journey easily!">
+  <meta name="keywords" content="Pakistan train schedule, train seat availability, live train tracking, Pakistan Railways online, train timings, book train tickets Pakistan">
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7298674822934289"
      crossorigin="anonymous"></script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PakRail Online</title>
-
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
- <meta name="description" content="Get the latest Pakistan Railways train schedules and updates, flight timings, and travel info. Plan your journey easily with PakRail Online.">
+
 <style>
 /* ===== HEADER ===== */
 .main-header {
