--- a/availSeats.html
+++ b/availSeats.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <title>PakRail Online – Pakistan Train Seat Availability & Live Tracking</title>
+  <meta name="description" content="Check Pakistan train seat availability, live train tracking, and train schedules instantly with PakRail Online. Plan your journey easily!">
+  <meta name="keywords" content="Pakistan train schedule, train seat availability, live train tracking, Pakistan Railways online, train timings, book train tickets Pakistan">
+  
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7298674822934289"
      crossorigin="anonymous"></script>
 <meta charset="UTF-8">
