--- a/timing.html
+++ b/timing.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <title>PakRail Online – Pakistan Train Seat Availability & Live Tracking</title>
+  <meta name="description" content="Check Pakistan train seat availability, live train tracking, and train schedules instantly with PakRail Online. Plan your journey easily!">
+  <meta name="keywords" content="Pakistan train schedule, train seat availability, live train tracking, Pakistan Railways online, train timings, book train tickets Pakistan">
 <meta charset="UTF-8">
 <title>Train Timing – pakrail.online</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
