--- a/prtracker/index.html
+++ b/prtracker/index.html
@@ -3,6 +3,9 @@
 <head>
        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7298674822934289"
      crossorigin="anonymous"></script>
+ <title>PakRail Online – Pakistan Train Seat Availability & Live Tracking</title>
+  <meta name="description" content="Check Pakistan train seat availability, live train tracking, and train schedules instantly with PakRail Online. Plan your journey easily!">
+  <meta name="keywords" content="Pakistan train schedule, train seat availability, live train tracking, Pakistan Railways online, train timings, book train tickets Pakistan">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pakistan Railways - Live Tracker</title>
