--- a/travel-guide.html
+++ b/travel-guide.html
@@ -233,6 +233,10 @@ Traveling by train is safe and enjoyable for families. Always carry valid identi
 <footer>
 © 2026 pakrail.online | Travel Guide for Passengers
 </footer>
-
+<script type="text/javascript">
+var infolinks_pid = 3443455;
+var infolinks_wsid = 0;
+</script>
+<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 </html>
