--- a/index.html
+++ b/index.html
@@ -543,6 +543,11 @@ function toggleMenu() {
   document.querySelector('.nav-links').classList.toggle('active');
 }
 </script>
-
+<!--infolink -->
+   <script type="text/javascript">
+var infolinks_pid = 3443455;
+var infolinks_wsid = 0;
+</script>
+<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 </html>
