--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <title>PakRail Online – Pakistan Train Seat Availability & Live Tracking</title>
   <meta name="description" content="Check Pakistan train seat availability, live train tracking, and train schedules instantly with PakRail Online. Plan your journey easily!">
   <meta name="keywords" content="Pakistan train schedule, train seat availability, live train tracking, Pakistan Railways online, train timings, book train tickets Pakistan">
-  
+  <meta name="7searchppc" content="8d6126ae66a14331e36560342faedf31"/>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7298674822934289"
      crossorigin="anonymous"></script>
 <meta charset="UTF-8">
